ie_um/src/main/java/com/example/ie_um/global/error/exception/InvalidGroupException.java
package com.example.ie_um.global.error.exception;

public class InvalidGroupException extends RuntimeException{
    public InvalidGroupException(String message) {
        super(message);
    }
}
